# remote-desktop-control

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  README.zh-CN.md  build-binary.mjs  build-web.sh  package-lock.json  package.json
.github/: repo-settings.md
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: daemon.rs  main.rs
crates/cli/src/commands/: agent.rs  config.rs  mod.rs  plugin.rs  session.rs  start.rs  task.rs  token.rs  tunnel.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  event_bus.rs  events.rs  lib.rs
crates/core/src/agent/: acp_backend.rs  acp_client.rs  auxiliary.rs  claude_bridge.rs  claude_sdk.rs  error_classify.rs  event.rs  manager.rs  mod.rs  native_acp.rs  types.rs
crates/core/src/notification/: detector.rs  mod.rs  router.rs  store.rs
crates/core/src/pty/: buffer.rs  manager.rs  mod.rs  osc.rs  session.rs  tmux.rs
crates/core/src/session/: store.rs  types.rs
crates/core/src/task_pool/: mod.rs  pool.rs  scheduler.rs  types.rs
crates/core/tests/: config_test.rs  event_bus_test.rs  pty_test.rs  session_store_test.rs
crates/plugin-host/: Cargo.toml
crates/plugin-host/src/: lib.rs  manager.rs  plugin.rs  protocol.rs  types.rs  watcher.rs
crates/plugin-host/src/im/: mod.rs
crates/plugin-host/src/tunnel/: mod.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  blocklist.rs  lib.rs  logging.rs  rate_limit.rs  router.rs  security.rs  state.rs  static_files.rs
crates/server/src/api/: mod.rs  notifications.rs  plugins.rs  sessions.rs  status.rs  tasks.rs  token.rs  tunnel.rs
crates/server/src/ws/: agent.rs  mod.rs  status.rs  terminal.rs
crates/tauri-app/: Cargo.toml  package.json  tauri.conf.json
crates/tauri-app/icons/: icon.icns
crates/tauri-app/src/: commands.rs  lib.rs  main.rs  tray.rs
design-system/rtb-2.0/: MASTER.md
docs/plans/: 2026-03-05-cicd-packaging-qrcode.md  2026-03-05-remote-terminal-bridge-design.md  2026-03-05-remote-terminal-bridge-impl.md  2026-03-05-v2-impl.md  2026-03-05-v2-upgrade-design.md  2026-03-05-v3-impl.md  2026-03-05-v3-upgrade-design.md
docs/superpowers/plans/: 2026-03-25-rtb-2.0-implementation.md  2026-03-26-phase1-terminal-redesign.md  2026-03-26-phase2a-acp-integration.md  2026-03-26-tunnel-port-feishu-websocket.md
docs/superpowers/specs/: 2026-03-25-rtb-2.0-redesign.md  2026-03-26-im-bridge-auto-agent-design.md  2026-03-26-terminal-agent-redesign.md  2026-03-26-tunnel-port-feishu-websocket-design.md
mobile/: app.json  eas.json  package-lock.json  package.json
mobile/app/: _layout.tsx  connect.tsx  index.tsx
mobile/app/(tabs)/: _layout.tsx  sessions.tsx  settings.tsx  terminal.tsx
mobile/components/: CreateSessionModal.tsx  QuickCommandBar.tsx  SessionList.tsx  TerminalInput.tsx
mobile/contexts/: ThemeContext.tsx
mobile/hooks/: useAppTheme.ts  useServer.ts  useTerminalSettings.ts
mobile/web/: terminal.html
plugins/cloudflare-tunnel/: Cargo.toml  plugin.toml
plugins/cloudflare-tunnel/src/: main.rs
plugins/feishu-plugin/: Cargo.toml  plugin.toml
plugins/feishu-plugin/src/: main.rs
src/: auth.test.ts  auth.ts  cli.ts  config.ts  feishu.test.ts  feishu.ts  input-detector.test.ts  input-detector.ts  integration.test.ts  notification.test.ts  notification.ts  pty-manager.test.ts  pty-manager.ts  qrcode-terminal.d.ts  server.ts  session-manager.test.ts  session-manager.ts  tunnel.ts  ws-server.test.ts  ws-server.ts
web/: commands.json  index.html  package-lock.json  package.json  sw.js  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css  main.tsx  theme.ts
web/src/components/: AgentChat.tsx  AgentDrawer.tsx  CommandPalette.tsx  ContextMenu.tsx  FocusView.tsx  GridView.tsx  MobileInputBar.tsx  MobileNav.tsx  MobileView.tsx  NotificationToast.tsx  PluginStatusBar.tsx  QRCodeModal.tsx  SearchBar.tsx  SessionList.tsx  SettingsPanel.tsx  StatusBar.tsx  StatusChip.tsx  TaskPool.tsx  TerminalView.tsx  TopBar.tsx
web/src/hooks/: usePlugins.ts  useSessions.ts  useTaskPool.ts  useTerminal.ts  useTheme.ts  useThemeMode.ts  useVisualViewportHeight.ts  useWebSocket.ts
web/src/lib/: api.ts  types.ts  websocket.ts
