[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/server",
    "crates/plugin-host",
    "crates/cli",
    "crates/tauri-app",
]
exclude = [
    "plugins/feishu-plugin",
    "plugins/cloudflare-tunnel",
]

[workspace.package]
version = "2.0.0-alpha.1"
edition = "2021"
license = "MIT"
rust-version = "1.82"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
thiserror = "2"
anyhow = "1"
dashmap = "6"
bytes = "1"
nanoid = "0.4"
chrono = { version = "0.4", features = ["serde"] }
