[package]
name = "rtb-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rtb-core = { path = "../core" }
rtb-server = { path = "../server" }
rtb-plugin-host = { path = "../plugin-host" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
qrcode = "0.14"
rand = "0.9"
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "blocking"] }
ctrlc = "3"
dirs = "6"
serde.workspace = true
serde_json.workspace = true
