[package]
name = "rtb-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
dashmap.workspace = true
bytes.workspace = true
nanoid.workspace = true
chrono.workspace = true
portable-pty = "0.8"
toml = "0.8"
dirs = "6"
notify = "7"

[dev-dependencies]
tempfile = "3"
