[package]
name = "rtb-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
dashmap.workspace = true
bytes.workspace = true
nanoid.workspace = true
chrono.workspace = true
portable-pty = "0.8"
anyhow = "1"
libc = "0.2"
toml = "0.8"
dirs = "6"
notify = "7"
agent-client-protocol = "0.10.3"
tokio-util = { version = "0.7", features = ["compat"] }
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
tempfile = "3"
