[package]
name = "rtb-plugin-host"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rtb-core = { path = "../core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
dashmap.workspace = true
toml = "0.8"
notify = "7"
