[package]
name = "rtb-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "rtb_desktop"
crate-type = ["staticlib", "cdylib", "lib"]

[features]
default = ["embedded-server"]
embedded-server = ["dep:rtb-core", "dep:rtb-server", "dep:rtb-plugin-host"]

[dependencies]
rtb-core = { path = "../core", optional = true }
rtb-server = { path = "../server", optional = true }
rtb-plugin-host = { path = "../plugin-host", optional = true }
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dirs = "6"
axum = "0.8"

[build-dependencies]
tauri-build = { version = "2", features = [] }
