[package]
name = "feishu-plugin"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Feishu (Lark) IM plugin for RTB remote desktop control"

# This is a standalone binary, NOT a workspace member.
# Build with: cargo build --manifest-path plugins/feishu-plugin/Cargo.toml

[[bin]]
name = "feishu-plugin"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
